html reserved characters added

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <section class="card card--green-col card-two">
           <h2 class="card__title">Monthly Subscription</h2>
           <p class="card__price">
-            $29 <span class="card__span">per month</span>
+            &dollar;29 <span class="card__span">per month</span>
           </p>
-          <p class="card__content">Full access for less than $1 a day</p>
+          <p class="card__content">Full access for less than &dollar;1 a day</p>
           <button class="card__btn">Sign Up</button>
         </section>
 
@@ -38,7 +38,7 @@
           <h2 class="card__title">Why Us</h2>
           <ul class="card__list">
             <li class="card__item">Tutorials by industry experts</li>
-            <li class="card__item">Peer & expert code review</li>
+            <li class="card__item">Peer &amp; expert code review</li>
             <li class="card__item">Coding exercises</li>
             <li class="card__item">Access to our Github repos</li>
             <li class="card__item">Community forum</li>
