--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             &dollar;29 <span class="card__span">per month</span>
           </p>
           <p class="card__content">Full access for less than &dollar;1 a day</p>
-          <button class="card__btn">Sign Up</button>
+          <a class="card__btn">Sign Up</a>
         </section>
 
         <section class="card card--lightgreen-col card-three">
